@@ -70,6 +70,14 @@ def get_current_url(environ, root_only=False, strip_querystring=False,
         if not strip_querystring:
             qs = environ.get('QUERY_STRING')
             if qs:
+                # QUERY_STRING really should be ascii safe but some browsers
+                # will send us some unicode stuff (I am looking at you IE).
+                # In that case we want to urllib quote it badly.
+                try:
+                    qs.decode('ascii')
+                except UnicodeError:
+                    qs = ''.join(x > 127 and '%%%02X' % x or c
+                                 for x, c in ((ord(x), x) for x in qs))
                 cat('?' + qs)
     return ''.join(tmp)
 
